<resources>
    <string name="app_name">MedicineDonator</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="FirstName">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password">Password</string>
    <string-array name="District">
        <item>District</item>
        <item>Ampara</item>
        <item>Anuradhapura</item>
        <item>Badulla</item>
        <item>Batticaloa</item>
        <item>Colombo</item>
        <item>Galle</item>
        <item>Gampaha</item>
        <item>Hambantota</item>
        <item>Jaffna</item>
        <item>Kalutara</item>
        <item>Kandy</item>
        <item>Kegalle</item>
        <item>Kilinochchi</item>
        <item>Kurunegala</item>
        <item>Mannar</item>
        <item>Matale</item>
        <item>Matara</item>
        <item>Monaragala</item>
        <item>Mullaitivu</item>
        <item>Nuwara Eliya</item>
        <item>Polonnaruwa</item>
        <item>Puttalam</item>
        <item>Ratnapura</item>
        <item>Trincomalee</item>
        <item>Vavuniya</item>

    </string-array>
</resources>