<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".User.Fragments.RegisterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        >
    <ScrollView
        android:id="@+id/scrollView"
        android:layout_above="@+id/rL2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtFirstname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="@string/FirstName"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etFirstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtLastname"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="@string/last_name"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etLastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtEmail"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="@string/email"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPhonenumber"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="Phone Number"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPhonenumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtDistrict"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="District"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="3dp">

            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/etDistrict"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:entries="@array/District"

                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtAddress"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="Address"
            android:gravity="left"
            app:boxCornerRadiusBottomEnd="5dp"
            app:boxCornerRadiusBottomStart="5dp"
            app:boxCornerRadiusTopEnd="5dp"
            app:boxCornerRadiusTopStart="5dp"
            app:boxStrokeWidth="3dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etAddress"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="text"
                />

        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtPasswordOne"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="15dp"
            android:hint="@string/password"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="3dp"
            app:layout_constraintTop_toBottomOf="@+id/txtAddress">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPasswordOne"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/txtReenterPassword"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginVertical="15dp"
            android:hint="@string/confirm_password"
            app:boxCornerRadiusBottomEnd="15dp"
            app:boxCornerRadiusBottomStart="15dp"
            app:boxCornerRadiusTopEnd="15dp"
            app:boxCornerRadiusTopStart="15dp"
            app:boxStrokeWidth="3dp"
            app:layout_constraintTop_toBottomOf="@+id/txtProvince">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etReenterPassword"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>
        </FrameLayout>
    </ScrollView>
    <RelativeLayout
        android:id="@+id/rL2"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"

            >



            <TextView
                android:id="@+id/txtSIGNUP"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginHorizontal="2dp"
                android:background="@drawable/round_button_blue"
                android:gravity="center"
                android:textColor="@color/white"

                android:text="Signup"
                android:textSize="12sp"
                android:textStyle="normal" />
        </LinearLayout>
    </RelativeLayout>
    </RelativeLayout>
</FrameLayout>